--- a/info/src/main/resources/MessagesBundle_en.properties
+++ b/info/src/main/resources/MessagesBundle_en.properties
@@ -5,10 +5,10 @@ question1=How many planets are there in Solar system
 question2=How many teeth ordinary person has
 question3=What should you do before going to bed
 question4=What is the capital of Russia
-question5=How many stores in 10-stores building
+question5=How many stores are there in 10-store building
 answer1=There are 8 planets in Solar system
 answer2=32 teeth
-answer3=You need to brush your teeths
+answer3=You need to brush your teeth
 answer4=Moscow
 answer5=10 stores
 to-exit-press=To exit press q
